# recommendation-ai

./: .gitignore
big-boss/: README.md  pyproject.toml  study.ipynb
big-boss/big_boss/applications/graphs/: onboarding_graph.py
big-boss/big_boss/infrastructure/config/: settings.py
big-boss/big_boss/infrastructure/llm/: openai_client.py
big-boss/big_boss/presentation/telegram/: runner.py
neural_recommendation/: .env  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  test_negative_sampling.py
neural_recommendation/data/processed_data/: user_feature_encoders.joblib
neural_recommendation/migrations/: env.py
neural_recommendation/migrations/versions/: 41328a15dd4e_ratings_table.py  5652e8e360aa_reset_table.py  6193b7acb096_new_user_table_gender.py  6749ad0b80a9_update_movies.py  8a40cd5d92be_create_users_table.py  eb00e3b0ec2d_new_user_table.py
neural_recommendation/models/: config.json  training_history.json
neural_recommendation/neural_recommendation/: app.py
neural_recommendation/neural_recommendation/applications/: __init__.py
neural_recommendation/neural_recommendation/applications/interfaces/: schemas.py
neural_recommendation/neural_recommendation/applications/services/: candidate_generator_service.py  ncf_feature_service.py  recommendation_application_service.py  recommendation_dto_mapper.py  recommendation_orchestrator.py  recommendation_service.py
neural_recommendation/neural_recommendation/domain/: __init__.py  exceptions.py
neural_recommendation/neural_recommendation/domain/models/: __init__.py  movie.py  rating.py  user.py
neural_recommendation/neural_recommendation/domain/services/: __init__.py  feature_engineering_service.py  recommendation_service.py
neural_recommendation/neural_recommendation/infrastructure/adapters/: __init__.py
neural_recommendation/neural_recommendation/infrastructure/config/: __init__.py  dependencies.py  settings.py
neural_recommendation/neural_recommendation/infrastructure/deep_learning/: model_inference_manager.py  sentence_embedding_processor.py
neural_recommendation/neural_recommendation/infrastructure/logging/: logger.py  std_logger_adapter.py
neural_recommendation/neural_recommendation/infrastructure/persistence/: database.py  models.py
neural_recommendation/neural_recommendation/presentation/routers/: auth.py  movies.py  ratings.py  recommendations.py  users.py
neural_recommendation/scripts/: candidate_generator.py  delete_all_users.py  insert_movies.py  insert_users_with_ratings.py  movie_dataset.py  ncf_feature_processor.py  test_cold_start_endpoint.py  train_model.py  trainer.py
neural_recommendation/tests/: conftest.py  factories.py  test_auth_api.py  test_auth_service.py  test_cold_start_functionality.py  test_cold_start_integration.py  test_cold_start_recommender_integration.py  test_get_users_use_case.py  test_recommendation_application_service.py  test_recommendation_service.py  test_repository_integration.py  test_use_cases.py  test_user_api.py
study/: 0_ncf_binary.ipynb  (+8 more)
(+134 files in other folders)
